trunk/Archive2/f3/ab63a741e89f16/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <aleatorio> 
   ^
main.cpp:11:42: error: empty character constant
         std :: cout  << dis ( GEN )  <<  '' ; 
                                          ^
main.cpp: In function 'int principal()':
main.cpp:6:5: error: 'random_device' is not a member of 'std'
     std :: random_device rd ; 
     ^
main.cpp:6:26: error: expected ';' before 'rd'
     std :: random_device rd ; 
                          ^
main.cpp:7:5: error: 'MT19937' is not a member of 'std'
     std :: MT19937 gen ( rd ( ) ) ; 
     ^
main.cpp:7:20: error: expected ';' before 'gen'
     std :: MT19937 gen ( rd ( ) ) ; 
                    ^
main.cpp:8:5: error: 'uniform_int_distribution' is not a member of 'std'
     std :: uniform_int_distribution <> dis ( 1 , 6 ) ;
     ^
main.cpp:8:38: error: expected primary-expression before '>' token
     std :: uniform_int_distribution <> dis ( 1 , 6 ) ;
                                      ^
main.cpp:8:52: error: 'dis' was not declared in this scope
     std :: uniform_int_distribution <> dis ( 1 , 6 ) ;
                                                    ^
main.cpp:10:13: error: expected primary-expression before 'int'
     para  ( int n = 0 ; n < 10 ;  + + n ) 
             ^
main.cpp:10:25: error: 'n' was not declared in this scope
     para  ( int n = 0 ; n < 10 ;  + + n ) 
                         ^
main.cpp:10:41: error: expected ';' before ')' token
     para  ( int n = 0 ; n < 10 ;  + + n ) 
                                         ^
main.cpp:12:22: error: unknown escape sequence: '\040'
     std :: cout  <<  " \ n " ; 
                      ^
main.cpp:13:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
